added feature section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,53 @@
                 </div>
             </div>
         </div>
-        
+        <div class="features">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>Features</h3>
+                </div>
+                <div class="all-cards">
+                    <div class="feature-card">
+                        <img src="images/features (1).jpg" alt="">
+                        <div class="info">
+                            <div class="text">
+                                <h3>Quality</h3>
+                                <hr>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                            </div>
+                            <div class="button">
+                                <a href="#">More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feature-card">
+                        <img src="images/features (1).jpg" alt="">
+                        <div class="info">
+                            <div class="text">
+                                <h3>Time</h3>
+                                <hr>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                            </div>
+                            <div class="button">
+                                <a href="#">More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feature-card">
+                        <img src="images/features (2).jpeg" alt="">
+                        <div class="info">
+                            <div class="text">
+                                <h3>Passion</h3>
+                                <hr>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                            </div>
+                            <div class="button">
+                                <a href="#">More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
