added new section

--- a/index.html
+++ b/index.html
@@ -243,5 +243,103 @@
                 </div>
             </div>
         </div>
+        <div class="testimonals">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>testimonals</h3>
+                </div>
+                <div class="all-cards">
+                    <div class="card">
+                        <img src="images/testo (1).jpeg" alt="">
+                        <div class="text">
+                            <h3>Mohamed Farag</h3>
+                            <h4>Full Stack Developer</h4>
+                            <span>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                            <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/testo (1).jpeg" alt="">
+                        <div class="text">
+                            <h3>Mohamed Ibrahim</h3>
+                            <h4>Full Stack Developer</h4>
+                            <span>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                            <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/testo (1).jpeg" alt="">
+                        <div class="text">
+                            <h3>Shady Nabil</h3>
+                            <h4>Full Stack Developer</h4>
+                            <span>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                            <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/testo (1).jpeg" alt="">
+                        <div class="text">
+                            <h3>Amr Hendawy</h3>
+                            <h4>Full Stack Developer</h4>
+                            <span>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                            </span>
+                            <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/testo (1).jpeg" alt="">
+                        <div class="text">
+                            <h3>Sherief Ashraf</h3>
+                            <h4>Full Stack Developer</h4>
+                            <span>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                            <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/testo (1).jpeg" alt="">
+                        <div class="text">
+                            <h3>Osama Mohamed</h3>
+                            <h4>Full Stack Developer</h4>
+                            <span>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                            <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
