--- a/index.html
+++ b/index.html
@@ -341,5 +341,331 @@
                 </div>
             </div>
         </div>
+        <div class="team">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>team members</h3>
+                </div>
+                <div class="all-team">
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-01.jpg" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-02.jpg" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-03.jpg" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-04.jpg" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-05.png" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-06.png" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-07.jpg" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="text">
+                            <div class="info">
+                                <h3>Name</h3>
+                                <p>Simple Short Description</p>
+                            </div>
+                        </div>
+                        <div class="image-part">
+                            <img src="images/team-08.jpg" alt="">
+                            <div class="icons">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="services">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>Services</h3>
+                </div>
+                <div class="services-all-cards">
+                    <div class="card">
+                        <div class="logo">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>Security</h3>
+                        </div>
+                        <div class="details-and-counter">
+                            <a href="">Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="logo">
+                            <i class="fas fa-tools fa-4x"></i>
+                            <h3>Fixing Issues</h3>
+                        </div>
+                        <div class="details-and-counter">
+                            <a href="">Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="logo">
+                            <i class="fas fa-map-marked-alt fa-4x"></i>
+                            <h3>Location</h3>
+                        </div>
+                        <div class="details-and-counter">
+                            <a href="">Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="logo">
+                            <i class="fas fa-laptop-code fa-4x"></i>
+                            <h3>Coding</h3>
+                        </div>
+                        <div class="details-and-counter">
+                            <a href="">Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="logo">
+                            <i class="fas fa-palette fa-4x"></i>
+                            <h3>Innovation</h3>
+                        </div>
+                        <div class="details-and-counter">
+                            <a href="">Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="logo">
+                            <i class="fas fa-bullhorn fa-4x"></i>
+                            <h3>Marketing</h3>
+                        </div>
+                        <div class="details-and-counter">
+                            <a href="">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="our-skills-main">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>Our Skills</h3>
+                </div>
+                <div class="our-skills">
+                    <div class="image">
+                        <img src="images/skills.png" alt="">
+                    </div>
+                    <div class="percentages">
+                        <div class="block">
+                            <div class="text">
+                                <h3>HTML</h3>
+                                <span>80%</span>
+                            </div>
+                            <div class="bar">
+                                <span style="width: 80%;"></span>
+                            </div>
+                        </div>
+                        <div class="block">
+                            <div class="text">
+                                <h3>CSS</h3>
+                                <span>85%</span>
+                            </div>
+                            <div class="bar">
+                                <span style="width: 85%;"></span>
+                            </div>
+                        </div>
+                        <div class="block">
+                            <div class="text">
+                                <h3>JAVASCRIPT</h3>
+                                <span>70%</span>
+                            </div>
+                            <div class="bar">
+                                <span style="width: 70%;"></span>
+                            </div>
+                        </div>
+                        <div class="block">
+                            <div class="text">
+                                <h3>PYTHON</h3>
+                                <span>80%</span>
+                            </div>
+                            <div class="bar">
+                                <span style="width: 80%;"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="how-it-works">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>how it works</h3>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="images/work-steps.png" alt="">
+                    </div>
+                    <div class="all-boxes">
+                        <div class="box">
+                            <img src="images/ser.jpeg" alt="">
+                            <div class="text">
+                                <h3>Business Analysis</h3>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <img src="images/blob (1).jpeg" alt="">
+                            <div class="text">
+                                <h3>Architecture</h3>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <img src="images/blob (2).jpeg" alt="">
+                            <div class="text">
+                                <h3>Developement</h3>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="latest_events">
+            <div class="Seprator">
+                <h3>latest news</h3>
+            </div>
+            <div class="content">
+                <div class="image1"><img src="images/dots.png" alt=""></div>
+                <div class="container">
+                    <div class="upper">
+                        <div class="image-middle"><img src="images/public-relations.png" alt=""></div>
+                        <div class="textandcounter">
+                            <div class="counter">
+                                <div class="Days"><span>215</span><p>Days</p></div>
+                                <div class="Hours"><span>20</span><p>Hours</p></div>
+                                <div class="minutes"><span>33</span><p>Minutes</p></div>
+                                <div class="Seconds"><span>25</span><p>Seconds</p></div>
+                            </div>
+                            <div class="other-text">
+                                <h3>Tech Masters Event 2021</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lower">
+                        <div class="boxes">
+                            <input type="email" name="" id="" placeholder="Enter Your Email">
+                            <input type="submit" value="Subscribe">
+                        </div>
+                    </div>
+                </div>
+                <div class="image2"><img src="images/dots.png" alt=""></div>
+            </div>
+
+        </div>
     </body>
 </html>
