new section added

--- a/index.html
+++ b/index.html
@@ -667,5 +667,98 @@
             </div>
 
         </div>
+        <div class="pricing-plans">
+            <img class="dotsleft" src="images/dots.png" alt="">
+            <img class="dotsright" src="images/dots.png" alt="">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>pricing-plans</h3>
+                </div>
+                <div class="all-boxes">
+                    <div class="box">
+                        <div class="upper">
+                            <h3>Basic</h3>
+                            <img src="images/hosting-basic.png" alt="">
+                            <h2>$15</h2>
+                            <h4>Per Month</h4>
+                        </div>
+                        <div class="lower">
+                            <ul>
+                                <li>10GB HDD Space</li>
+                                <li>5 Email Addresses</li>
+                                <li>2 Subdomains</li>
+                                <li>4 Databases</li>
+                                <li>Basic Support</li>
+                            </ul>
+                        </div>
+                        <div class="button"><button>Choose Plan</button></div>
+                    </div>
+                    <div class="box">
+                        <div class="upper">
+                            <h3>Advanced</h3>
+                            <img src="images/hosting-advanced.png" alt="">
+                            <h2>$25</h2>
+                            <h4>Per Month</h4>
+                        </div>
+                        <div class="lower">
+                            <ul>
+                                <li>20GB HDD Space</li>
+                                <li>10 Email Addresses</li>
+                                <li>5 Subdomains</li>
+                                <li>8 Databases</li>
+                                <li>Advanced Support</li>
+                            </ul>
+                        </div>
+                        <div class="button"><button>Choose Plan</button></div>
+                    </div>
+                    <div class="box">
+                        <div class="upper">
+                            <h3>Professional</h3>
+                            <img src="images/hosting-professional.png" alt="">
+                            <h2>$45</h2>
+                            <h4>Per Month</h4>
+                        </div>
+                        <div class="lower">
+                            <ul>
+                                <li>50GB HDD Space</li>
+                                <li>20 Email Addresses</li>
+                                <li>10 Subdomains</li>
+                                <li>20 Databases</li>
+                                <li>Professional Support</li>
+                            </ul>
+                        </div>
+                        <div class="button"><button>Choose Plan</button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="top-videos">
+            <div class="container">
+                <div class="Seprator">
+                    <h3>Top Videos</h3>
+                </div>
+                <div class="content">
+                    <div class="stamps">
+                        <div class="head">
+                            Top Videos
+                            <i class="fas fa-random"></i>
+                        </div>
+                        <ul>
+                            <li>How To Create Sub Domain <span>05:18</span></li>
+                            <li>Playing With The DNS<span>03:18</span></li>
+                            <li>Everything About The Virtual Hosts<span>05:25</span></li>
+                            <li>How To Monitor Your Website<span>04:16</span></li>
+                            <li>Uncharted Beating The Last Boss<span>07:48</span></li>
+                            <li>Ys Oath In Felghana Overview<span>03:12</span></li>
+                            <li>Ys Series All Games Ending<span>08:10</span></li>
+                        </ul>
+                    </div>
+                    <div class="video">
+                        <img src="images/Preak-Wordle.jpg" alt="">
+                        <div>Everything About The Virtual Hosts</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
